Fix image tag syntax in index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <div class="button-overlay">
-            <img src="https://drive.google.com/uc?export=view&id=1FoTgNC6cKD1ka7mL1dauIw-klUIi3oWD" 
+            <img src="https://lh3.googleusercontent.com/d/1FoTgNC6cKD1ka7mL1dauIw-klUIi3oWD" 
                  alt="Landing Page" 
                  class="banner-image">
             
